--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MiniMap</string>
+    <string name="app_name">iTracked</string>
     <string name="title_activity_maps">Map</string>
     <string name="search_hint">Search username or family</string>
     <string name="username_hint">Username</string>
@@ -27,4 +27,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="user_info_box_time">m ago</string>
+
+    <string name="profile_new_username_hint">Username</string>
+    <string name="profile_startup_text">Always tracked</string>
 </resources>
