--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">iTracked</string>
+    <string name="app_name" translatable="false">iTracked</string>
     <string name="title_activity_maps">Map</string>
     <string name="search_hint">Search username or family</string>
     <string name="username_hint">Username</string>
@@ -9,6 +9,9 @@
     <string name="login_button">Login</string>
 
     <string name="home_button">Locate</string>
+    <string name="home_search_hint_icon">Start searching your friends</string>
+    <string name="home_search_failed">Our systems cannot find anything</string>
+    <string name="home_search_no_internet_connection">Check your internet connection</string>
 
     <string name="register_error_short_username">Your username is too short</string>
     <string name="register_error_pick_username">Pick up your username</string>
@@ -21,7 +24,7 @@
     <string name="main_menu_exit">Logout</string>
     <string name="main_menu_gps">Track your location</string>
 
-    <string name="title_activity_i_tracked">iTracked</string>
+    <string name="title_activity_i_tracked" translatable="false">iTracked</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -36,21 +39,15 @@
     <string name="profile_new_username_hint_user_exist">Username is not available</string>
     <string name="profile_new_username_hint_user_available">Username is available</string>
     <string name="profile_startup_text">Always tracked</string>
-    <string name="profile_details">
-        iTracked uses your GPS location and send it across the Internet
-        to give access to your friend or family to find you at any time!
-        You can forbid access to your location due to your privacy but
-        some functionality will not work
-    </string>
+    <string name="profile_details">"iTracked uses your GPS location and send it across the Internet  to give access to your friend or family to find you at any time! You can forbid access to your location due to your privacy but some functionality will not work     "</string>
 
     <string name="family_hint">Family</string>
     <string name="family_members_count">Members: </string>
-    <string name="family_details">Feature called "family" is  used to identify more people
-        at the same time and connect all your friends/family in one group to simplify the search.
-    </string>
+    <string name="family_details">"Feature called family is  used to identify more people at the same time and connect all your friends/family in one group to simplify the search.     "</string>
 
     <string name="gps_network_not_enabled">GPS is not enabled</string>
     <string name="open_location_settings">GPS is not enabled</string>
     <string name="cancel">Cancel</string>
     <string name="location_not_enabled">Your position will not be displayed</string>
+    <string name="profile_details">iTracked uses your GPS location and send it across the Internet         to give access to your friend or family to find you at any time!         You can forbid access to your location due to your privacy but         some functionality will not work</string>
 </resources>
