--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,21 +25,23 @@
     <string name="main_menu_gps">Track your location</string>
 
     <string name="title_activity_i_tracked" translatable="false">iTracked</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
+    <string name="nav_header_title" translatable="false">Android Studio</string>
+    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
+    <string name="nav_profile">Profile</string>
+    <string name="nav_family">Family</string>
+    <string name="nav_home">Home</string>
     <string name="action_settings">Settings</string>
 
-    <string name="user_info_box_time">m ago</string>
+    <string name="user_info_box_time" translatable="false">m ago</string>
 
     <string name="profile_new_username_hint">Username</string>
     <string name="profile_interval_hint">Interval of updating in minutes:</string>
     <string name="profile_new_username_hint_user_exist">Username is not available</string>
     <string name="profile_new_username_hint_user_available">Username is available</string>
     <string name="profile_startup_text">Always tracked</string>
-    <string name="profile_details">"iTracked uses your GPS location and send it across the Internet  to give access to your friend or family to find you at any time! You can forbid access to your location due to your privacy but some functionality will not work     "</string>
 
     <string name="family_hint">Family</string>
     <string name="family_members_count">Members: </string>
