--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="family_details">"Feature called family is  used to identify more people at the same time and connect all your friends/family in one group to simplify the search.     "</string>
 
     <string name="gps_network_not_enabled">GPS is not enabled</string>
-    <string name="open_location_settings">GPS is not enabled</string>
+    <string name="open_location_settings">GPS settings</string>
     <string name="cancel">Cancel</string>
     <string name="location_not_enabled">Your position will not be displayed</string>
     <string name="profile_details">iTracked uses your GPS location and send it across the Internet         to give access to your friend or family to find you at any time!         You can forbid access to your location due to your privacy but         some functionality will not work</string>
