--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,17 +9,22 @@
     <string name="login_button">Login</string>
 
     <string name="home_button">Locate</string>
+    <string name="home_user_has_no_position">User did not updated his position yet</string>
     <string name="home_search_hint_icon">Start searching your friends</string>
     <string name="home_search_failed">Our systems cannot find anything</string>
     <string name="home_search_no_internet_connection">Check your internet connection</string>
 
     <string name="register_error_short_username">Your username is too short</string>
     <string name="register_error_pick_username">Pick up your username</string>
+    <string name="register_error_space_username">You can\'t use spaces in your username</string>
+    <string name="register_error_warning">Warning</string>
     <string name="register_error_short_password">Your password is too short</string>
     <string name="register_error_different_pass">Your passwords are different</string>
     <string name="register_error_user_exist">User already exists</string>
 
-    <string name="login_error_nope">Something gone wrong</string>
+    <string name="login_error_nope">Check your username or password</string>
+    <string name="login_error_put_username">Insert your username</string>
+    <string name="login_error_put_password">Your password is too short</string>
 
     <string name="main_menu_exit">Logout</string>
     <string name="main_menu_gps">Track your location</string>
@@ -31,7 +36,7 @@
     <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="nav_profile">Profile</string>
-    <string name="nav_family">Family</string>
+    <string name="nav_family">Groups</string>
     <string name="nav_home">Home</string>
     <string name="action_settings">Settings</string>
 
@@ -43,7 +48,7 @@
     <string name="profile_new_username_hint_user_available">Username is available</string>
     <string name="profile_startup_text">Always tracked</string>
 
-    <string name="family_hint">Family</string>
+    <string name="family_hint">Group</string>
     <string name="family_members_count">Members: </string>
     <string name="family_details">"Feature called family is  used to identify more people at the same time and connect all your friends/family in one group to simplify the search.     "</string>
 
